2006-07-12  Michael Smith  <msmith@fluendo.com>

	* flumotion/common/medium.py:
	  Stop pinging on remoteReference disconnection.

	* flumotion/manager/base.py:
	  Don't start ping-checking until we have an attached mind.

	* flumotion/test/test_manager_manager.py:
	* flumotion/test/test_manager_worker.py:
	* flumotion/test/test_worker_worker.py:
	  Fix tests to clean up properly so that we don't have unclear
	  reactors.

2006-07-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/bouncers/htpasswdcrypt.py:
	  reorder to prefer the challenger-based keycard
	* flumotion/component/bouncers/saltsha256.py:
	  check for the right interface
	* flumotion/component/bouncers/bouncer.py:
	  document

2006-07-12  Michael Smith  <msmith@fluendo.com>

	* flumotion/common/medium.py:
	  Remove bogus method.

	* flumotion/manager/manager.py:
	  When cleaning out the planet, we can only send stop() to components
	  for which we have avatars - if it's lost or sad, we might not.

2006-07-12  Michael Smith  <msmith@fluendo.com>

	* flumotion/test/test_manager_manager.py:
	  Improve test so that we test both expected and unexpected logouts,
	  and ensure that the state is correct (sleeping for expected, lost
	  for unexpected) after this. 

	* flumotion/test/test_worker_worker.py:
	  Make FakeRef stub out a few other things.

2006-07-12  Michael Smith  <msmith@fluendo.com>

	* flumotion/twisted/pb.py:
	  Move PingableAvatar here.

	* flumotion/common/medium.py:
	  Move PingingMedium here.

	* flumotion/admin/admin.py:
	  Subclass from PingingMedium

	* flumotion/component/component.py:
	  Add a rather ugly hack to note here when we've stopped the reactor,
	  so that we can avoid calling reactor.stop() twice (which fails
	  badly).

	  Make BaseComponentMedium subclass PingingMedium. 

	  Remove heartbeats, as these are now done by the PingingMedium
	  automatically.

	* flumotion/job/job.py: